--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Mick Vaites
 description: Just another G33k
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://avatars.githubusercontent.com/u/25416519?v=4
 
 #
 # Flags below are optional
